--- a/Szovegszerkeszto/MainWindow.xaml
+++ b/Szovegszerkeszto/MainWindow.xaml
@@ -4,9 +4,17 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Szovegszerkeszto"
+        xmlns:UserControls="clr-namespace:Szovegszerkeszto.UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="Eccerű SzövegSzerk" Height="450" Width="800">
+    <DockPanel>
+        <UserControls:CustomMenu x:Name="menu" DockPanel.Dock="Top"/>
+        <UserControls:CustomToolbar DockPanel.Dock="Top"/>
+        <StatusBar DockPanel.Dock="Bottom">
+            <TextBlock x:Name="status"/>
+        </StatusBar>
+        <RichTextBox x:Name="body" SpellCheck.IsEnabled="True"
+                     AcceptsReturn="True" AcceptsTab="True"
+                     BorderThickness="0,2,0,0"/>
+    </DockPanel>
 </Window>
